새기능추가;

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <ol>
     <li>fdfsdfsdf</li>
     <li>기능추가추가
-      
+    <li>fhrmdls rlsdm ghks</li>
     </li>
   </ol>
+  <p>새로운 작업했다.</p>
 </body>
 </html>
